--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,10 @@
 # Prerequisites
 *.d
-
-# Object files
 *.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
 *.ilk
 *.map
 *.exp
 
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
 
 # Executables
 *.exe
@@ -34,19 +12,15 @@
 *.app
 *.i*86
 *.x86_64
-*.hex
+
 
 # Debug files
-*.dSYM/
+Debug/Drivers
+Debug/Src
+Debug/startup
 *.su
 *.idb
 *.pdb
+*.lst
 
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+/Debug/
